EvalFactory now prints to ByteBuf and returns Objects instead of Strings